# AP-STA-Router-esp

AP and Static/APSTA/: APSTA.ino
AP and Static/client/: client.ino
APSTA/: README.md  sdkconfig  sdkconfig.defaults
APSTA/main/: CMakeLists.txt  app_main.c  config.h  wifi_manager.c  wifi_manager.h
